# dexter-mini

./: .env.example  .gitignore  CLAUDE.md  DEMO_RUN.md  README.md  docker-compose.yml
apps/gateway/: .dockerignore  Dockerfile  pyproject.toml
apps/gateway/app/: config.py  db.py  main.py  models.py
apps/gateway/app/agent/: __init__.py  graph.py  llm_tools.py  prompts.py  react_parser.py
apps/gateway/app/evals/: __init__.py  __main__.py  cases.py  runner.py  scorers.py
apps/gateway/app/llm/: __init__.py  _settings.py  client.py  reliability.py  router.py
apps/gateway/app/obs/: middleware.py
apps/gateway/app/routes/: agent.py  audit.py  health.py  residents.py  transcribe.py
apps/gateway/app/schemas/: enums.py  sis.py
apps/gateway/app/seeds/: seed.py
apps/gateway/app/tools/: __init__.py  _audit.py  _errors.py  _types.py  drafting.py  gaps.py  resident.py  workflow.py
apps/gateway/tests/: conftest.py  test_agent.py  test_drafting.py  test_llm.py  test_resident.py  test_workflow.py
apps/web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/web/src/: App.tsx  index.css
