[project]
name = "dexter-mini-gateway"
version = "0.1.0"
description = "dexter-mini care shift copilot — FastAPI gateway"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "tortoise-orm[asyncpg]>=0.21",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
]

[tool.uv]
package = false
