[project]
name = "dexter-mini-gateway"
version = "0.1.0"
description = "dexter-mini care shift copilot — FastAPI gateway"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "tortoise-orm[asyncpg]>=0.21",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "litellm>=1.52",
    "instructor>=1.6",
    "langchain-core>=0.3",
    "langgraph>=0.2.50",
    # LiteLLM's langfuse integration calls `langfuse.version.__version__`,
    # which was removed in langfuse v3+. Pin to the 2.x line until LiteLLM
    # ships a v3-compatible callback.
    "langfuse>=2.50,<3.0",
    "python-multipart>=0.0.9",
]

[tool.uv]
package = false
